# aliexpress

./: .gitignore  .pre-commit-config.yaml  README.MD  aliexpress.bat  aliexpress.lnk  app.py  datareader.py  environment.yml  environment_dev.yml  leerlingindeling.ipynb  niet_samen.xlsx  problemsolver.py  pulp_bitwise_operations.py  pulp_logical.py  pyproject.toml  solutions.py  voorkeuren.xlsx
input_templates/: groepen.xlsx  niet_samen.xlsx  voorkeuren.xlsx
notebooks/: leerlingindeling.ipynb
src/: leerlingindeling.ipynb  problemsolver.py
src/aliexpress/: __init__.py  appconfig.py  candidatedetermination.py  datareader.py  errors.py  input_writer.py  main.py  problemsolver.py  pulp_logical.py  sociogram.py  solutions.py  testdata.py
static/: style.css
templates/: base.html  done.html  fillin.html  home.html  processing.html  result.html  sociogram.html  upload.html
testdata/: edex_test.xml
tests/: test_candidatedetermination.py  test_datareader.py  testdata.py  testedexmlgeneration.py
tests/integration/: test_integration_main.py
