[project]
name = "ali-express"
version = "0.1.0"
description = "Calculates the ideal distribution of students"
authors = [{ name = "Sjoerd Cornelissen"}]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
